[gd_scene load_steps=2 format=3 uid="uid://cp4npuuxewybj"]

[ext_resource type="Script" path="res://src/scenes/managers/debugManager/debugManager.gd" id="1_c7di6"]

[node name="debugManager" type="CanvasLayer"]
script = ExtResource("1_c7di6")

[node name="visual" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="visual"]
layout_mode = 2
offset_left = 10.0
offset_right = 630.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0.286275)

[node name="MarginContainer" type="MarginContainer" parent="visual"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="visual/MarginContainer"]
layout_mode = 2

[node name="display" type="VBoxContainer" parent="visual/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="fps" type="Label" parent="visual/MarginContainer/HBoxContainer/display"]
layout_mode = 2
text = "fps: placeholder"

[node name="playerVelocity" type="Label" parent="visual/MarginContainer/HBoxContainer/display"]
layout_mode = 2
text = "velocity: placeholder"

[node name="playerInput" type="Label" parent="visual/MarginContainer/HBoxContainer/display"]
layout_mode = 2
text = "input: placeholder"

[node name="cameraOffset" type="Label" parent="visual/MarginContainer/HBoxContainer/display"]
layout_mode = 2
text = "cameraOffset: placeholder"

[node name="justifyBetween" type="Control" parent="visual/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="commands" type="VBoxContainer" parent="visual/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="removePlayerHp" type="Button" parent="visual/MarginContainer/HBoxContainer/commands"]
layout_mode = 2
text = "-10 playerHp"

[connection signal="pressed" from="visual/MarginContainer/HBoxContainer/commands/removePlayerHp" to="." method="_on_remove_player_hp_pressed"]
